--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     <script src="index.js"></script>
   </body>
 
-  <footer>Made with ❤️ in London.</footer>
+  <footer>Copyright @ Yash Chaudhary</footer>
 </html>
